docs: record milestone 8, the review findings, and what could not be verified
NEXT-STEPS gains the milestone 8 section: what landed, the four defects the
review of milestones 1 to 7 turned up, the three things reported rather than
fixed, and the two-node checklist that is the only way any of it gets believed.

It also states plainly what did not happen. `./gradlew check build` did not run:
this environment has only a JDK 21 against a toolchain pinned to 25, every JDK
download host is blocked by the network policy, `repo.papermc.io` is blocked so
`:backend` and `:proxy` cannot resolve a compile classpath, and there is no
Docker for the Testcontainers suites. What did run is `:core` under javac 21 in
preview mode (138 non-Docker tests green) and `spotlessApply` across every
module. The backend and proxy halves of this milestone are reviewed code, not
verified code, and the file says so rather than implying otherwise.

Also adds the ArchUnit rules that stop the wall-clock lease bug returning. The
existing rule covered `core.db` only, which is why both components that actually
take lease decisions were outside it. The proxy had no architecture test at all.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01865ts1SqdRdHkpiBWondwf